# ollama-intern

./: LICENSE  README.MD  ollama_intern.py  pyproject.toml  raw_ask_ollama.py
