[tool.poetry]
name = "ollama-intern"
version = "0.1.0"
description = "Based on open-interpreter but much, much simpler, just to learn."
authors = ["coffeecodechem <coffeecodechem@gmail.com>"]
readme = "README.md"
packages = [{include = "ollama_intern"}]

[tool.poetry.dependencies]
python = "^3.11"
charset-normalizer = "^3.1.0"  # Needed cause of a bug in poetry
urllib3 = "^1.26.16"  # Needed cause of a bug in poetry
litellm = "^1.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
